--- a/css/main.scss
+++ b/css/main.scss
@@ -501,6 +501,10 @@ $baseurl: '{{ site.baseurl }}/images';
 		&.style3 {
 			color: _palette(accent4, bg);
 		}
+
+		&.style4 {
+			color: _palette(accent6, bg);
+		}
 	}
 
 /* Image */
