update footer to include our github handles and link to the template

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,8 +20,10 @@
       {% if diff contains '-' %}{{ site.first_published }},{% endif %}
     {% endif %}
     {{ thisyear }}
-    {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-    <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-    <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
+    <li>Design: <a href="https://github.com/arkadianriver/spectral" target="_blank">Spectral</a></li>
+    <li>By <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+  </ul>
+  <ul class="copyright"
+    <li>Built with <a class="icon fa-heart"></a> by <a href="https://github.com/ayakomachi">@ayakomachi</a> + <a href="https://github.com/domofactor">@domofactor</a></li>
   </ul>
 </footer>
