--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -4,19 +4,19 @@
     <h2>RSVP</h2>
     <form method="POST" action="http://formspree.io/sftmb4+wedding@gmail.com">
       Party
-      <select name="party" style="background: #2e3842; margin-top: 4px">
+      <select name="party">
         <option value="none">-</option>
         <option value="ayako">Ayako</option>
         <option value="Terrell">Terrell</option>
       </select>
       <br>First Name
-      <input type="text" name="first_name" style="background: #2e3842; margin-top: 4px"/>
+      <input type="text" name="first_name">
       <br>Last Name
-      <input type="text" name="last_name" style="background: #2e3842; margin-top: 4px"/>
+      <input type="text" name="last_name">
       <br>Email
-      <input type="text" name="email" style="background: #2e3842; margin-top: 4px"/>
+      <input type="text" name="email">
   	  <br>
-  	  <button type="submit" style="background: #ed4933">RSVP</button>
+  	  <button type="submit" class="button special">RSVP</button>
   	</form>
   </header>
   <ul class="icons major">
