progress so far

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,10 @@
   <!--[if lte IE 8]><link rel="stylesheet" href="{{ "/css/ie8.css" | prepend: site.baseurl }}" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{ "/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <!--{% if page.image.background or site.background %}
+  {% capture background %}{% if page.image.background %}{{ page.image.background }}{% else %}{{ site.background }}{% endif %}{% endcapture %}
+  {% unless background contains 'http://' or background contains 'https://' %}{% capture background %}{{ site.url }}{{ site.baseurl }}/images/{{ background }}{% endcapture %}{% endunless %}
+  <style type="text/css">body {background-image:url({{ background }});}</style>
+  {% endif %} -->
 </head>
