--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,22 +1,31 @@
 <!-- About -->
 <section class="spotlight">
-  <div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-    <h2>Magna primis lobortis<br />
-    sed ullamcorper</h2>
+  <div class="image"><img src="images/ayako01.jpg" alt="" /></div><div class="content">
+    <h2>Ayako</h2>
     <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-    <h2>Tortor dolore feugiat<br />
-    elementum magna</h2>
+  <div class="image"><img src="images/terrell01.jpg" alt="" /></div><div class="content">
+    <h2>Terrell</h2>
+    <p>Moved to Japan in 2015 to teach english</p>
+  </div>
+</section>
+<section class="spotlight">
+  <div class="image"><img src="images/couple01.jpg" alt="" /></div><div class="content">
+    <h2>Meeting</h2>
     <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-    <h2>Augue eleifend aliquet<br />
-    sed condimentum</h2>
+  <div class="image"><img src="images/couple02.jpg" alt="" /></div><div class="content">
+    <h2>Something</h2>
     <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+  </div>
+</section>
+<section class="spotlight">
+  <div class="image"><img src="images/couple03.jpg" alt="" /></div><div class="content">
+    <h2>Engaged!</h2>
+    <p>Terrell proposed infront of Tokyo Tower on Christmas Eve 2017. Luckily, Ayako said yes!</p>
   </div>
 </section>
