--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,17 +13,11 @@
     {% endif %}
     {% endfor %}
   </ul>
+  <ul class="copyright"
+    <li><a class="icon fa-code"></a> with <a class="icon fa-heart"></a> by <a href="https://github.com/ayakomachi">@ayakomachi</a> + <a href="https://github.com/domofactor">@domofactor</a></li>
+  </ul>
   <ul class="copyright">
-    <li>&copy; {% assign thisyear = site.time | date: "%Y" %}
-    {% if site.first_published %}
-      {% capture diff %}{{ site.first_published | minus:thisyear }}{% endcapture %}
-      {% if diff contains '-' %}{{ site.first_published }},{% endif %}
-    {% endif %}
-    {{ thisyear }}
     <li>Design: <a href="https://github.com/arkadianriver/spectral" target="_blank">Spectral</a></li>
     <li>By <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-  </ul>
-  <ul class="copyright"
-    <li>Built with <a class="icon fa-heart"></a> by <a href="https://github.com/ayakomachi">@ayakomachi</a> + <a href="https://github.com/domofactor">@domofactor</a></li>
   </ul>
 </footer>
