--- a/css/main.scss
+++ b/css/main.scss
@@ -1806,7 +1806,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		#page-wrapper {
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/banner.jpg")'));
 			background-attachment: fixed;
-			background-position: center center;
+			background-position: left center;
 			background-repeat: no-repeat;
 			background-size: cover;
 			padding-top: 0;
@@ -1826,7 +1826,7 @@ $baseurl: '{{ site.baseurl }}/images';
 			#banner,
 			.wrapper.style4 {
 				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/banner.jpg")'));
-				background-position: center center;
+				background-position: left center;
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
