fix venue address spacing, re-order sections

--- a/_includes/sections/venue.html
+++ b/_includes/sections/venue.html
@@ -4,11 +4,12 @@
     <h2>Venue</h2>
     <br>
     <h4>Bayside Geihinkan Veranda</h4>
-    <p>1 Chome-3-1 Shinkō, Naka-ku<br />
-    Yokohama-shi, Kanagawa-ken, Japan, 231-0001<br />
-    TEL: <a href="tel:+81-045-222-6550">+81-045-222-6550</a><br />
-    <a href="https://www.tgn.co.jp/hall/yokohama/bgv" target="_blank">https://www.tgn.co.jp/hall/yokohama/bgv</a>
-    </p>
+    <pre>
+1 Chome-3-1 Shinkō, Naka-ku
+Yokohama, Kanagawa, Japan, 231-0001
+TEL: <a href="tel:+81-045-222-6550">+81-045-222-6550</a>
+<a href="https://www.tgn.co.jp/hall/yokohama/bgv" target="_blank">https://www.tgn.co.jp/hall/yokohama/bgv</a>
+    </pre>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3249.998876299315!2d139.6394912516601!3d35.45482224986443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185c570bc03d2f%3A0xfc52277cfb5c43bc!2sBAYSIDE+GEIHINKAN+VERANDA!5e0!3m2!1sen!2sjp!4v1543392344026" width="80%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </header>
   <h4>Access</h4>
