updating rsvp form and adding a custom thank you page

--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -2,21 +2,18 @@
 <div class="inner">
   <header class="major">
     <h2>RSVP</h2>
-    <form method="POST" action="http://formspree.io/sftmb4+wedding@gmail.com">
-      Party
-      <select name="party">
-        <option value="none">-</option>
-        <option value="ayako">Ayako</option>
-        <option value="Terrell">Terrell</option>
-      </select>
-      <br>First Name
-      <input type="text" name="first_name">
-      <br>Last Name
-      <input type="text" name="last_name">
-      <br>Email
-      <input type="text" name="email">
-  	  <br>
+    <form id="rsvp" method="POST" action="http://formspree.io/sftmb4+wedding@gmail.com">
+      First Name <input type="text" name="first_name">
+      Last Name <input type="text" name="last_name">
+      Email <input type="text" name="email">
+      Party <select name="party" form="rsvp">
+             <option value="none" selected>-</option>
+             <option value="Ayako">Ayako</option>
+             <option value="Terrell">Terrell</option>
+             </select>
+      <br>
   	  <button type="submit" class="button special">RSVP</button>
+      <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks.html"/>
   	</form>
   </header>
   <ul class="icons major">
