--- a/_includes/sections/thanks.html
+++ b/_includes/sections/thanks.html
@@ -1,5 +1,8 @@
 <!-- Thank -->
 <div class="thanks" align="center">
   <p>Thanks for RSVP'ing! We looking forward to seeing you!</p>
+  <a href="{{ site.baseurl }}/index.html#rsvp" class="button special">RSVP Again</a>
+  <br>
+  <br>
   <img src="images/party-octocat.png" alt="party" align="middle">
 </div>
