try adding referrer

--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -1,6 +1,7 @@
 <!-- RSVP -->
 <div class="inner">
   <header class="major">
+    <meta name="Referrer" content="origin">
     <h2>RSVP</h2>
     <form id="rsvp" method="POST" action="http://formspree.io/sftmb4+wedding@gmail.com">
       First Name <input type="text" name="first_name">
