update about headers

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,7 +1,7 @@
 <!-- About -->
 <section class="spotlight">
   <div class="image"><img src="images/ayako01.jpg" alt="" /></div><div class="content">
-    <h2>Ayako</h2>
+    <h2>About Ayako</h2>
     <p>Born in Mito, Japan in 1986, Ayako has 2 older siblings.(1 brother and 1 sister)</p>
     <p>After getting her degree in English Studies, she briefly spent time living in Australia</p>
     <p>For fun, Ayako likes to watch movies, cat videos and travel</p>
@@ -9,7 +9,7 @@
 </section>
 <section class="spotlight">
   <div class="image"><img src="images/terrell01.jpg" alt="" /></div><div class="content">
-    <h2>Terrell</h2>
+    <h2>About Terrell</h2>
     <p>Born in San Francisco, California, USA in 1990 and raised in Seattle, Washington, USA, Terrell has 1 younger sister</p>
     <p>After getting his degree in IT and working for a few startups in Seattle, He moved to Japan in 2015 to teach english</p>
     <p>He would later switch back to working in IT in Japan</p>
@@ -37,3 +37,4 @@
     <p>After dating for a couple years, Terrell proposed infront of Tokyo Tower on Christmas Eve 2017 and Ayako said Yes!</p>
   </div>
 </section>
+</div>
