--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
     <li><a class="icon fa-code"></a> with <a class="icon fa-heart"></a> by <a href="https://github.com/ayakomachi">@ayakomachi</a> + <a href="https://github.com/domofactor">@domofactor</a></li>
   </ul>
   <ul class="copyright">
+    <li>Code: <a href="https://github.com/tanda/wedding" target="_blank">tanda/wedding</a></li>
     <li>Design: <a href="https://github.com/arkadianriver/spectral" target="_blank">Spectral</a></li>
-    <li>By <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
   </ul>
 </footer>
