--- a/_includes/sections/thanks.html
+++ b/_includes/sections/thanks.html
@@ -4,5 +4,5 @@
   <a href="{{ site.baseurl }}/index.html#rsvp" class="button special">RSVP Again</a>
   <br>
   <br>
-  <img src="images/party-octocat.png" alt="party" align="middle">
+  <img src="images/welcometocat2.png" alt="party" align="middle">
 </div>
