use a better field name for food restrictions

--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -12,7 +12,7 @@
              <option value="Ayako">Ayako</option>
              <option value="Terrell">Terrell</option>
              </select>
-      Food Restrictions/Allergies <input type="text" name="food" value="none">
+      Food Restrictions/Allergies <input type="text" name="food_restrictions" value="none">
       <br>
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks.html"/>
   	  <button type="submit" class="button special">RSVP</button>
