first pass at multilang

--- a/_includes/sections/en/hotels.html
+++ b/_includes/sections/en/hotels.html
@@ -7,22 +7,22 @@
     <li>
       <h3>Yokohama Bay Hotel Tokyu</h3>
       <pre><a href="https://goo.gl/maps/YWR8MUEsMr72" target="_blank">https://goo.gl/maps/YWR8MUEsMr72</a></pre>
-      <img src="images/hotels/tokyu.jpg" alt="Tokyu" align="middle">
+      <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/tokyu.jpg" alt="Tokyu" align="middle">
     </li>
     <li>
       <h2>Navios Yokohama</h2>
       <pre><a href="https://goo.gl/maps/rNj7jHwsajD2" target="_blank">https://goo.gl/maps/rNj7jHwsajD2</a></pre>
-      <img src="images/hotels/navios.jpg" alt="Navios" align="middle">
+      <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/navios.jpg" alt="Navios" align="middle">
     </li>
     <li>
       <h2>Sotetsu Fresa Inn</h2>
       <pre><a href="https://goo.gl/maps/FmtvioQTCRu" target="_blank">https://goo.gl/maps/FmtvioQTCRu</a></pre>
-      <img src="images/hotels/fresa.jpg" alt="Fresa" align="middle">
+      <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/fresa.jpg" alt="Fresa" align="middle">
     </li>
     <li>
       <h2>Washington Hotel</h2>
       <pre><a href="https://goo.gl/maps/mRsXC8BTGvo" target="_blank">https://goo.gl/maps/mRsXC8BTGvo</a></pre>
-      <img src="images/hotels/washington.jpg" alt="Washington" align="middle">
+      <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/washington.jpg" alt="Washington" align="middle">
     </li>
   </ul>
 </div>
