--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <!-- Page Wrapper -->
     <div id="page-wrapper">
 
-      {% include header.html %}
+      {% include sections/{{ page.lang }}/header.html %}
 
       {{ content }}
 
