--- a/_includes/sections/en/about.html
+++ b/_includes/sections/en/about.html
@@ -1,6 +1,6 @@
 <!-- About -->
 <section class="spotlight">
-  <div class="image"><img src="images/ayako01.jpg" alt="" /></div><div class="content">
+  <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/ayako01.jpg" alt="" /></div><div class="content">
     <h2>About Ayako</h2>
     <p>Born in Mito, Japan in 1986, Ayako has 2 older siblings.(1 brother and 1 sister)</p>
     <p>After getting her degree in English Studies, she briefly spent time living in Australia</p>
@@ -8,7 +8,7 @@
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/terrell01.jpg" alt="" /></div><div class="content">
+  <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/terrell01.jpg" alt="" /></div><div class="content">
     <h2>About Terrell</h2>
     <p>Born in San Francisco, California, USA in 1990 and raised in Seattle, Washington, USA, Terrell has 1 younger sister</p>
     <p>After getting his degree in IT and working for a few startups in Seattle, He moved to Japan in 2015 to teach english</p>
@@ -17,7 +17,7 @@
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/couple01.jpg" alt="" /></div><div class="content">
+  <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple01.jpg" alt="" /></div><div class="content">
     <h2>Meeting</h2>
     <p>Ayako and Terrell met in early 2015 when they both had started new jobs with an english teaching company based out of Mito, Japan</p>
     <p>Initially they knew each other only through email from gathering documents for Terrell's working visa</p>
@@ -25,14 +25,14 @@
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/couple02.jpg" alt="" /></div><div class="content">
+  <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple02.jpg" alt="" /></div><div class="content">
     <h2>Dating</h2>
     <p>When they first started dating, they would see each other mostly on weekends between Yokohama and Mito</p>
     <p>Things got easier however when Ayako moved in with Terrell in Yokohama in the spring of 2016</p>
   </div>
 </section>
 <section class="spotlight">
-  <div class="image"><img src="images/couple03.jpg" alt="" /></div><div class="content">
+  <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple03.jpg" alt="" /></div><div class="content">
     <h2>She Said Yes!</h2>
     <p>After dating for a couple years, Terrell proposed infront of Tokyo Tower on Christmas Eve 2017 and Ayako said Yes!</p>
   </div>
