--- a/_includes/sections/en/header.html
+++ b/_includes/sections/en/header.html
@@ -1,8 +1,9 @@
 <!-- Header -->
 <header id="header"{% if page.layout == 'landing' %} class="alt"{% endif %}>
-  <h1><a href="{{ site.baseurl }}/index.html">{{ site.title[page.lang] }}</a></h1>
+  <h1><a href="{{ site.baseurl }}/{{ page.lang }}/index.html">{{ site.title[page.lang] }}</a></h1>
   <nav id="nav">
     <ul>
+      <a href="{{ site.url }}/{{ site.baseurl }}/jp/" <span>日本語🇯🇵</span></a>
       <li class="special">
         <a href="#menu" class="menuToggle"><span>Menu</span></a>
         <div id="menu">
