--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <article id="main">
 
   <header>
-    <h2>{{ page.title }}</h2>
+    <h2>{{ page.title[page.lang] }}</h2>
   </header>
 
   <section class="wrapper style5">
