fix language links

--- a/_includes/sections/jp/header.html
+++ b/_includes/sections/jp/header.html
@@ -3,7 +3,7 @@
   <h1><a href="{{ site.baseurl }}/{{ page.lang }}/index.html">{{ site.title[page.lang] }}</a></h1>
   <nav id="nav">
     <ul>
-      <a href="{{ site.url }}/{{ site.baseurl }}/en/" <span>English🇬🇧</span></a>
+      <a href="{{ site.url }}{{ site.baseurl }}/en/" <span>English🇬🇧</span></a>
       <li class="special">
         <a href="#menu" class="menuToggle"><span>メニュ</span></a>
         <div id="menu">
