update some of the japanese

--- a/_includes/sections/jp/header.html
+++ b/_includes/sections/jp/header.html
@@ -9,7 +9,7 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="#venue" class="icon fa-building"> 場所</a></li>
+            <li><a href="#venue" class="icon fa-building"> 会場</a></li>
             <li><a href="#about" class="icon fa-question"> カップルについて</a></li>
             <li><a href="#rsvp" class="icon fa-paper-plane-o"> RSVP</a></li>
             <li><a href="#hotels" class="icon fa-bed"> ホテル</a></li>
