--- a/_includes/sections/jp/hotels.html
+++ b/_includes/sections/jp/hotels.html
@@ -1,7 +1,7 @@
 <!-- Hotels -->
 <div class="hotels">
   <header class="major">
-    <h2>Reccomended Hotels</h2>
+    <h2>近くのホテル</h2>
   </header>
   <ul class="features">
     <li>
@@ -10,17 +10,17 @@
       <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/tokyu.jpg" alt="Tokyu" align="middle">
     </li>
     <li>
-      <h2>Navios Yokohama</h2>
+      <h2>ナビオス横浜</h2>
       <pre><a href="https://goo.gl/maps/rNj7jHwsajD2" target="_blank">https://goo.gl/maps/rNj7jHwsajD2</a></pre>
       <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/navios.jpg" alt="Navios" align="middle">
     </li>
     <li>
-      <h2>Sotetsu Fresa Inn</h2>
+      <h2>相鉄フレッサイン 横浜桜木町</h2>
       <pre><a href="https://goo.gl/maps/FmtvioQTCRu" target="_blank">https://goo.gl/maps/FmtvioQTCRu</a></pre>
       <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/fresa.jpg" alt="Fresa" align="middle">
     </li>
     <li>
-      <h2>Washington Hotel</h2>
+      <h2>横浜桜木町ワシントンホテル</h2>
       <pre><a href="https://goo.gl/maps/mRsXC8BTGvo" target="_blank">https://goo.gl/maps/mRsXC8BTGvo</a></pre>
       <img src="{{ site.url }}/{{ site.baseurl}}/images/hotels/washington.jpg" alt="Washington" align="middle">
     </li>
