--- a/_includes/sections/jp/venue.html
+++ b/_includes/sections/jp/venue.html
@@ -1,11 +1,12 @@
 <!-- Venue -->
 <div class="venue">
   <header class="major">
-    <h2>Venue</h2>
+    <h2>会場</h2>
     <br>
     <h4>Bayside Geihinkan Veranda</h4>
     <pre>
-〒231-0001 神奈川県横浜市中区新港1-3-1MARINE ＆ WALK YOKOHAMA内
+〒231-0001 神奈川県横浜市中区新港1-3-1
+MARINE ＆ WALK YOKOHAMA
 TEL: <a href="tel:+81-045-222-6550">+81-045-222-6550</a>
 <a href="https://www.tgn.co.jp/hall/yokohama/bgv" target="_blank">https://www.tgn.co.jp/hall/yokohama/bgv</a>
     </pre>
