--- a/_includes/sections/jp/about.html
+++ b/_includes/sections/jp/about.html
@@ -1,7 +1,7 @@
 <!-- About -->
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/ayako01.jpg" alt="" /></div><div class="content">
-    <h2>About Ayako</h2>
+    <h2>綾子のこと</h2>
     <p>Born in Mito, Japan in 1986, Ayako has 2 older siblings.(1 brother and 1 sister)</p>
     <p>After getting her degree in English Studies, she briefly spent time living in Australia</p>
     <p>For fun, Ayako likes to watch movies, cat videos and travel</p>
@@ -9,7 +9,7 @@
 </section>
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/terrell01.jpg" alt="" /></div><div class="content">
-    <h2>About Terrell</h2>
+    <h2>テレルのこと</h2>
     <p>Born in San Francisco, California, USA in 1990 and raised in Seattle, Washington, USA, Terrell has 1 younger sister</p>
     <p>After getting his degree in IT and working for a few startups in Seattle, He moved to Japan in 2015 to teach english</p>
     <p>He would later switch back to working in IT in Japan</p>
@@ -18,7 +18,7 @@
 </section>
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple01.jpg" alt="" /></div><div class="content">
-    <h2>Meeting</h2>
+    <h2>出会い</h2>
     <p>Ayako and Terrell met in early 2015 when they both had started new jobs with an english teaching company based out of Mito, Japan</p>
     <p>Initially they knew each other only through email from gathering documents for Terrell's working visa</p>
     <p>However, they later would meet in-person at new employee training in Yokohama</p>
@@ -26,14 +26,14 @@
 </section>
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple02.jpg" alt="" /></div><div class="content">
-    <h2>Dating</h2>
+    <h2>好き合い</h2>
     <p>When they first started dating, they would see each other mostly on weekends between Yokohama and Mito</p>
     <p>Things got easier however when Ayako moved in with Terrell in Yokohama in the spring of 2016</p>
   </div>
 </section>
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/couple03.jpg" alt="" /></div><div class="content">
-    <h2>She Said Yes!</h2>
+    <h2>婚約</h2>
     <p>After dating for a couple years, Terrell proposed infront of Tokyo Tower on Christmas Eve 2017 and Ayako said Yes!</p>
   </div>
 </section>
