--- a/_includes/sections/jp/about.html
+++ b/_includes/sections/jp/about.html
@@ -1,7 +1,7 @@
 <!-- About -->
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/ayako01.jpg" alt="" /></div><div class="content">
-    <h2>綾子のこと</h2>
+    <h2>絢子のこと</h2>
     <p>Born in Mito, Japan in 1986, Ayako has 2 older siblings.(1 brother and 1 sister)</p>
     <p>After getting her degree in English Studies, she briefly spent time living in Australia</p>
     <p>For fun, Ayako likes to watch movies, cat videos and travel</p>
