--- a/_includes/sections/en/header.html
+++ b/_includes/sections/en/header.html
@@ -3,7 +3,7 @@
   <h1><a href="{{ site.baseurl }}/{{ page.lang }}/index.html">{{ site.title[page.lang] }}</a></h1>
   <nav id="nav">
     <ul>
-      <a href="{{ site.url }}{{ site.baseurl }}/ja/" <span>日本語🇯🇵</span></a>
+      <a href="{{ site.url }}{{ site.baseurl }}/jp/" <span>日本語🇯🇵</span></a>
       <li class="special">
         <a href="#menu" class="menuToggle"><span>Menu</span></a>
         <div id="menu">
