change ayako profile

--- a/_includes/sections/jp/about.html
+++ b/_includes/sections/jp/about.html
@@ -2,9 +2,9 @@
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/ayako01.jpg" alt="" /></div><div class="content">
     <h2>絢子のこと</h2>
-    <p>Born in Mito, Japan in 1986, Ayako has 2 older siblings.(1 brother and 1 sister)</p>
-    <p>After getting her degree in English Studies, she briefly spent time living in Australia</p>
-    <p>For fun, Ayako likes to watch movies, cat videos and travel</p>
+    <p>茨城県水戸市生まれ。兄と姉がいて、３人兄弟の末っ子。</p>
+    <p>大学では英語学科を専攻。社会人を数年経験後、オーストラリアで１年過ごす。</p>
+    <p>旅行と映画鑑賞が趣味。動物の動画を見るのも好き！</p>
   </div>
 </section>
 <section class="spotlight">
