change terrell profile

--- a/_includes/sections/jp/about.html
+++ b/_includes/sections/jp/about.html
@@ -10,10 +10,10 @@
 <section class="spotlight">
   <div class="image"><img src="{{ site.url }}/{{ site.baseurl}}/images/terrell01.jpg" alt="" /></div><div class="content">
     <h2>テレルのこと</h2>
-    <p>Born in San Francisco, California, USA in 1990 and raised in Seattle, Washington, USA, Terrell has 1 younger sister</p>
-    <p>After getting his degree in IT and working for a few startups in Seattle, He moved to Japan in 2015 to teach english</p>
-    <p>He would later switch back to working in IT in Japan</p>
-    <p>For fun, Terrell likes to tinker with old nissans, play basketball, and watch american football</p>
+    <p>サンフランシスコ生まれのシアトル育ち。 妹がいて２人兄妹。</p>
+    <p>大学ではITを専攻し、卒業後数年間ITベンチャー企業で働く。2015年から日本に住み始め、英語の先生として働き始める。</p>
+    <p>その後、キャリアをITに戻し、現在はシステムエンジニアとして活躍!</p>
+    <p>車とバスケが趣味で、アメフトは地元のシーホークスファン！</p>
   </div>
 </section>
 <section class="spotlight">
